# exploration-winding

./: .gitlab-ci.yml  MODULE.bazel
exploration/winding/: BUILD.bazel  library_vector.cpp  library_vector.hpp  library_winding.cpp  library_winding.hpp  main.cpp
exploration/winding/benches/: BUILD.bazel  plane2d_from_points.cpp  plane2d_intersection.cpp
exploration/winding/tests/plane2dfrompoints/: BUILD.bazel  generic.cpp  optimized.cpp  shared.hpp  x86_avx_1.cpp  x86_sse_1.cpp
